# ira

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  handler.rs  lib.rs  main.rs  ui.rs
src/components/: bookmarks_ui.rs  common_folders_ui.rs  drives_ui.rs  mod.rs  tab1_files_ui.rs
src/domain/: data.rs
src/services/: bookmarks.rs  config_dir.rs  drives.rs  folders.rs  list_files.rs  mod.rs  windows_drives_labels.rs
src/utils/: is_dir.rs  mod.rs
